Fixed z-indexes

--- a/src/frontend/static/frontend/src/css/gem.css
+++ b/src/frontend/static/frontend/src/css/gem.css
@@ -131,6 +131,11 @@
     margin-left: 0.5%;
 }
 
+/* Prevents the clinical source Popup to be over UserFiles modal */
+#select-gem-file-type {
+    z-index: 1000;
+}
+
 /* Prevents the Popup to be over some modals */
 #clinical-source-popup, .ui.dimmer {
     z-index: 2000 !important;
@@ -139,11 +144,6 @@
 /* Prevents modals to be over the popups */
 .popup {
     z-index: 2500 !important;
-}
-
-/* Prevents the clinical source Popup to be over UserFiles modal */
-#user-files-modal, #select-gem-file-type {
-    z-index: 2000;
 }
 
 #advice-infer-interest {
